# geoveo-v3

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
docs/: api.md  architecture.md
examples/: alster_job.json
skill/: README.md  SKILL.md
skill/docs/: implementation-notes.md  runbook.md
skill/examples/: alster_skill_request.json  alster_skill_response.json  request.example.json
skill/schemas/: conditioning_bundle.schema.json  generate_video.input.schema.json  generate_video.output.schema.json  get_route.input.schema.json  get_route.output.schema.json  get_street_level_image.input.schema.json  get_street_level_image.output.schema.json  job.schema.json
skill/scripts/: scaffold_project.py
skill/templates/: job_log.json  render_plan.md
src/geoveo/: cli.py  config.py  exceptions.py  logging.py  models.py  orchestrator.py  validation.py
src/geoveo/api/: main.py
src/geoveo/api/routers/: health.py  jobs.py
src/geoveo/backends/: animatediff.py  base.py  cogvideox.py  factory.py  veo.py
src/geoveo/providers/: __init__.py  base.py  factory.py  stubs.py
src/geoveo/schemas/: conditioning_bundle.schema.json  job.schema.json
src/geoveo/services/: conditioning.py  evaluation.py  imagery.py  routing.py
tests/: test_api.py  test_error_handling.py  test_evaluation.py  test_integration.py  test_orchestrator.py  test_providers.py  test_validation.py
